sms: common timeout of 180s for the send operation

On low signal quality conditions, the process of sending the SMS to
the network may take a really long time, way more than the 30s used as
default in some implementations.

We now define a common timeout value of 180s for this operation in all
protocols.

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/328